kubernetes/client-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template: # template de pod
    metadata:
      name: client-pod
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: gb0001/apptpjuin:latest
