kubernetes/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - port: 3200
      targetPort: 3002 # cible l'application serveur conteneurisé dans le Pod référencé
      nodePort: 30007
